index.html is the student bio with css folder

--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
-<meta charset="utf-8">
-<title>Test Page</title>
+	<meta charset="utf-8">
+
+	<title>Student Bio</title>
+
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
+
 <body>
+	<header>
+		<h1>Student Bio</h1>
+	</header>
+
+	<div class="container">
+
+		<section id="main-bio">
+
+			<h2>Karen Henderson</h2>
+			<img id="bio-image" src="https://avatars3.githubusercontent.com/u/25589982?v=3" alt="Karen Henderson">
+		
+
+			<p>It seems that I have come full circle. When I first started college ("I'm not telling you when that was!"), I wanted to be a programmer, or so I thought. A computer science major consisted of alot of math classes, so no, thank you! With a business management major and comp sci minor, I began my career.</p>
+
+			<p>Fast forward a few (ok, several) years. After having done desktop support, software deployment, going to culinary school and owning a tea room, the prodigal has returned home. Let's meet over a cup of tea!</p>
+		</section>
+
+		<section id="contact-info">
+			<h2>Contact Info</h2>
+
+			<ul>
+				<li><strong>Email:</strong> <a href="mailto:khendo888@gmail.com">khendo888@gmail.com</a></li>
+				<li><strong>Github:</strong> <a href="https://github.com/khendo888" target="_blank">Github</a></li>
+				<li><strong>Portfolio:</strong> <a href="#">Coming Soon!</a></li>
+			</ul>
+		</section>
+
+	</div>
 
 </body>
+
 </html>
